tests/compile_fail/endpoint_authorize_none_scopes.stderr
error: Cannot use #[acube_authorize(scopes = [...])] with #[acube_security(none)]. Use #[acube_security(jwt)] for scope-protected endpoints.
 --> $WORKSPACE/tests/compile_fail/endpoint_authorize_none_scopes.rs
  |
  | async fn test_handler(_ctx: AcubeContext) -> AcubeResult<Json<serde_json::Value>, Never> {
  |          ^^^^^^^^^^^^
